数据作品详细技能
添加

--- a/data.html
+++ b/data.html
@@ -97,7 +97,7 @@
 							<a href="#" class="blog-img"><img src="images/jk.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">Z世代三坑服饰趣味数据研究</a></h3>
-								<span><small>数据研究报告 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
+								<span><small>数据报告/文本分析 </small> / <small> 爬虫工具/Excel/Matlab </small> / <small> <i class="icon-comment"></i> 2021</small></span>
 								<p>一系列关于年轻爱好群体“三坑服饰”时尚数据的趣味视频。</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://www.bilibili.com/video/BV1vh41117Dc?spm_id_from=333.999.0.0&vd_source=c654b79d11008711b7456151b460cf21" target="_blank">Lolita</a>
@@ -113,7 +113,7 @@
 							<a href="#" class="blog-img"><img src="images/datavideo.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">DateVideo：数据动画创作平台</a></h3>
-								<span><small>工具开发 </small> / <small> Web/VS/Git </small> / <small> <i class="icon-comment"></i> 2019-2020</small></span>
+								<span><small>Web工具开发 </small>  /JavaScript/ HTML/CSS/Git项目管理 <small> <i class="icon-comment"></i> 2019-2020</small></span>
 								<p>DateVideo将丰富的图表动画与基础的图文编辑功能相结合，制作优秀的数据视频。负责构建画布操作、资源管理、音乐、文件管理系统，包含文本、图形生成、拖拽、旋转、颜色管理、风格设置等重要功能开发和界面设计</p>
 								<a href="https://datavideo.idvxlab.com/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://datavideo.idvxlab.com/" target="_blank">链接</a>
@@ -128,7 +128,7 @@
 							<a href="#" class="blog-img"><img src="images/pacific.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">情感可视化：Smile or Scowl? Looking at Infographic Design Through the Affective Lens</a></h3>
-								<span><small>Paper </small> / <small> 可视化 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<span><small>Paper </small> / <small> 信息图/Web开发 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>什么因素触发了信息图表中的情感反应？参与数据分析，负责网页前后端设计与开发，网页交互式呈现设计因素与设计案例，加入了图片瀑布流、主题色更换等功能。</p>
 								<a href="https://ieeexplore.ieee.org/document/9409643/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://ieeexplore.ieee.org/document/9409643/" target="_blank">PDF</a>
@@ -142,7 +142,7 @@
 							<a href="#" class="blog-img"><img src="images/putian.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">莆田医网-PacificVis2020入围作品</a></h3>
-								<span><small>数据可视化 </small> / <small> D3 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<span><small>数据可视化 </small> / <small> Web/D3 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>搜集公司历史信息，使用桑基图大致勾勒出莆田医院的运营肖像。负责桑基图视觉设计开发，以浮游点表达莆田系医院的数量，流动代表医院的生命历程，通过滑动交互、悬浮、拖拽等操作呈现不同结果</p>
 								<a href="https://olivialan.github.io/putian_2/index.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://olivialan.github.io/putian_2/index.html" target="_blank">链接</a>
@@ -162,7 +162,7 @@
 							<a href="#" class="blog-img"><img src="images/smartvis.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">SmartVis：线上智能数据故事可视化平台</a></h3>
-								<span><small>可视化开发 </small> / <small> D3 </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<span><small>可视化开发 </small> / <small> Web/D3 </small> / <small> <i class="icon-comment"></i> 2018</small></span>
 								<p>参与线上智能数据可视化平台开发，负责Barchart、Linechart可视化组件的开发</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://datacalliope.com/" target="_blank">链接</a>
@@ -179,7 +179,7 @@
 							<a href="#" class="blog-img"><img src="images/fangzui.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">全球犯罪热点可视化交互网站</a></h3>
-								<span><small>毕设 </small> / <small> WebGis/D3 </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<span><small>毕设 </small> / <small> JavaScript/Openlayers/D3 </small> / <small> <i class="icon-comment"></i> 2018</small></span>
 								<p>基于开源的全球犯罪数据，运用多视图的地理信息数据可视化技术，包括Openlayer、leaflet以及D3、echarts、highcharts库，呈现可交互的犯罪时序热点分析结果，以此为主题撰写了毕设论文。</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="#" target="_blank">待上传网页</a>
@@ -192,7 +192,7 @@
 							<a href="#" class="blog-img"><img src="images/zhinanai.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">社交网络中的“直男癌”</a></h3>
-								<span><small>数据新闻 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<span><small>数据新闻/文本分析 </small> / <small> 爬虫工具/Excel/Python </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<p>为了搞清楚网络上频繁出现的“直男癌”到底是什么，从七个社交平台暴力爬取了有关“直男癌”逾300万字的文本数据，负责策划选题、数据爬取、文本分析、视觉、撰文，阅读量30W+</p>
 								<a href="https://zhuanlan.zhihu.com/p/28923834" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://zhuanlan.zhihu.com/p/28923834" target="_blank">知乎</a>
@@ -207,7 +207,7 @@
 							<a href="#" class="blog-img"><img src="images/00.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">00后相亲交友观全面观察</a></h3>
-								<span><small>数据新闻 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<span><small>数据新闻/文本分析 </small> / <small> 爬虫工具/Excel/Python </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<p>从三大00后贴吧爬取了近期的2.3万个帖子，经过数据清洗得到了22696个“相亲帖”，进行多维度分析，观察00后的相亲交友观。负责了策划选题、数据爬取、文本分析、视觉、撰文</p>
 								<a href="https://www.163.com/data/article/CUA789FT000181IU.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://www.163.com/data/article/CUA789FT000181IU.html" target="_blank">网易数读</a>
@@ -225,7 +225,7 @@
 							<a href="#" class="blog-img"><img src="images/mengxiang.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">小时候的梦想</a></h3>
-								<span><small>数据新闻 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<span><small>数据新闻/文本分析 </small> / <small> 爬虫工具/Excel/Python </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<p>提取微博近1.2万条有关梦想的关键词，整理出了一份“梦想职业”榜，这份榜单掀起了80后、90后的集体回忆杀。负责策划选题、数据爬取、文本分析、视觉、撰文，轻量取巧的选题取得了较高的讨论热度</p>
 								<a href="https://zhuanlan.zhihu.com/p/34176035" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://zhuanlan.zhihu.com/p/34176035" target="_blank">网易数读</a>
@@ -263,7 +263,7 @@
 							<a href="#" class="blog-img"><img src="images/kongbu.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">恐怖主义3.0</a></h3>
-								<span><small>信息图 </small> / <small> AI/PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<span><small>信息图 </small> / <small> EXCEL/AI/PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<p>参加第三届数据新闻大赛的作品</p>
 								<a href="detail/kongbu-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="detail/kongbu-detail.jpg" target="_blank">Infographic</a>
@@ -326,7 +326,7 @@
 							<a href="#" class="blog-img"><img src="images/acm.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">ACM数学建模比赛</a></h3>
-								<span><small>统计图 </small> / <small> Excel </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<span><small>统计图 </small> / <small> Excel/PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -403,7 +403,7 @@
 							<a href="#" class="blog-img"><img src="images/wumai.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">雾霾数据实时监测可视化</a></h3>
-								<span><small>可视化 </small> / <small> Python</small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<span><small>可视化 </small> / <small> Python </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
