--- a/notes.html
+++ b/notes.html
@@ -104,7 +104,9 @@
 									前行时，或许会感到压力</br>
 									回头观望时，可能会感觉遗憾</br>
 									...</br>
-									它们听起来完全不可靠，但是</br>
+									它们听起来完全不可靠，</br>
+									更多的时候，会感觉它们完全矛盾，无法抉择，令人心生茫然，感觉无从下手</br>
+									但是</br>
 									将他们记载在案，偶尔去实现一个</br>
 									应该也是很不错的人生动力</br>
 								</p>
