恐怖主义3.0更新

--- a/data.html
+++ b/data.html
@@ -264,7 +264,7 @@
 							<div class="desc">
 								<h3><a href="#">恐怖主义3.0</a></h3>
 								<span><small>信息图 </small> / <small> EXCEL/AI/PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
-								<p>参加第三届数据新闻大赛的作品</p>
+								<p>参加第三届数据新闻大赛的作品,分析了开源恐怖主义事件发生数据，评测了3.0时代的恐怖主义发展态势</p>
 								<a href="detail/kongbu-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="detail/kongbu-detail.jpg" target="_blank">Infographic</a>
 							</div>
