--- a/data.html
+++ b/data.html
@@ -180,7 +180,7 @@
 								<span><small>毕设 </small> / <small> JavaScript/D3 </small> / <small> <i class="icon-comment"></i> 2019</small></span>
 								<p>treemap</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="detail/treemap/tree.html" target="_blank">网页</a>
+								<a href="article/treemap/tree.html" target="_blank">网页</a>
 							</div>
 						</div>
 					</div>
