--- a/data.html
+++ b/data.html
@@ -176,8 +176,8 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/fangzui.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">treemap</a></h3>
-								<span><small>毕设 </small> / <small> JavaScript/D3 </small> / <small> <i class="icon-comment"></i> 2019</small></span>
+								<h3><a href="#">Treemap</a></h3>
+								<span><small>可视化 </small> / <small> JavaScript/D3 </small> / <small> <i class="icon-comment"></i> 2019</small></span>
 								<p>treemap</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="article/treemap/tree.html" target="_blank">网页</a>
