--- a/study.html
+++ b/study.html
@@ -90,6 +90,9 @@
 			<div class="fh5co-narrow-content">
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">学术科研与创新 Academic research and innovation</h2>
 
+
+
+
 				<div class="row row-bottom-padded-md">
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
@@ -144,7 +147,9 @@
 						</div>
 					</div>
 
-
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
 
 				</div>
 
@@ -200,6 +205,10 @@
 						</div>
 					</div>
 
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
+
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -246,6 +255,7 @@
 					</div>
 
 
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/naxie.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
@@ -257,6 +267,11 @@
 							</div>
 						</div>
 					</div>
+
+
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -278,9 +293,11 @@
 							<div class="desc">
 								<h3><a href="#">PanoGo：基于室内全景导航的商场服务系统</a></h3>
 								<span><small>创新创业项目 </small> / <small> 创业/APP </small> / <small> <i class="icon-comment"></i> 2017-2018</small></span>
-								<p>项目旨在通过全景技术构建虚拟商城，打通线上与线下一体化购物，能够足不出户逛商城、到了商城有导航。项目在第三届互联网+大赛中获省铜奖、校优秀科研项目、
+								<p>
+									项目旨在通过全景技术构建虚拟商城，打通线上与线下一体化购物，能够足不出户逛商城、到了商城有导航。项目在第三届互联网+大赛中获省铜奖、校优秀科研项目、
 									<a href="https://news.whu.edu.cn/info/1002/52272.htm?from=timeline&isappinstalled=0" target="_blank">全国创新创业年会最佳创意项目</a>
-								，取得软件著作权、论文各一份。</p>
+									，取得软件著作权、论文各一份。
+								</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -300,6 +317,8 @@
 					</div>
 
 
+
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/cnn.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
@@ -312,6 +331,10 @@
 							</div>
 						</div>
 					</div>
+
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
 
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
